fix: submenu alignment with top link

--- a/#src/scss/module/_header.scss
+++ b/#src/scss/module/_header.scss
@@ -146,7 +146,7 @@ Submenu
   .menu__sub-list {
     position: absolute;
     top: 100%;
-    left: -30%;
+    left: -15px;
     background-color: $background-color;
     -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
